# zudyog-learning

./: LICENSE  README.md
rag-langchain-milvus/: .gitIgnore  README.md  main.py  pyproject.toml  requirements.txt
rag-langchain-milvus/data/: quantum_computing.txt
zudyog-resume-bot/: README.md
zudyog-resume-bot/api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
zudyog-resume-bot/api/src/: database.py  main.py
zudyog-resume-bot/api/src/core/: config.py  utils.py
zudyog-resume-bot/api/src/document_handler/: document_retrieval.py  exceptions.py  models.py  utils.py
zudyog-resume-bot/api/src/models/: bot_assistant.py  chat_llm.py  metadata.py  query_model.py
zudyog-resume-bot/chat/: .gitIgnore  Dockerfile  README.md  app.py  chat.py  process.py  pyproject.toml  requirements.txt
